--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,11 @@ header nav ul li:hover a {
     font-size: 1.5em;
     padding: 15px 30px;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: background-color 0.2s ease-in-out;
+}
+
+.btn_lien:hover {
+    background: #9E4235;
 }
 
 .fete_mere .fete_mere_g {
