--- a/css/style.css
+++ b/css/style.css
@@ -846,13 +846,21 @@ table.commandes td {
 }
 
 /* -------- PAGE LOTERIE ----------- */
+#jeuLoterie {
+    margin: 100px 0;
+}
+
+#jeuLoterie h1.h1,
+#jeuLoterie p.pLoterie {
+    text-align: center;
+    margin-bottom: 50px;
+}
 
 .machine {
     width: 350px;
     margin: 0 auto;
     text-align: center;
-    margin-bottom: 50px;
-    background-color: #444;
+    background-color: var(--color-green);
     padding: 20px;
     border-radius: 10px;
 }
@@ -861,7 +869,7 @@ table.commandes td {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #555;
+    background-color: var(--color-article);
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -877,7 +885,6 @@ table.commandes td {
     text-align: center;
     font-weight: bold;
     margin: 0 5px;
-    border-radius: 5px;
     position: relative;
     overflow: hidden;
 }
@@ -894,7 +901,7 @@ table.commandes td {
 }
 
 #spinButton {
-    background-color: #555;
+    background-color: var(--color-article);
     color: white;
     font-weight: bold;
     padding: 10px 20px;
@@ -904,7 +911,7 @@ table.commandes td {
 }
 
 #spinButton:hover {
-    background-color: #666;
+    background-color: #A79000;
 }
 
 .message {
@@ -919,7 +926,7 @@ table.commandes td {
 }
 
 #formGain .submitGain {
-    background-color: #555;
+    background-color: var(--color-article);
     color: white;
     font-weight: bold;
     padding: 10px 20px;
@@ -929,7 +936,7 @@ table.commandes td {
 }
 
 #formGain .submitGain:hover {
-    background-color: #666;
+    background-color: #A79000;
 }
 
 /* -------- FOOTER ----------- */
